Add Volet card - crypto e-wallet & spending card since 2014

--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@ const allCards = [
   { id: 208, name: 'Keyflo', logo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/6dcbea33-4090-41a4-fe62-9b9b83bc3500/public', brandLogo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/6dcbea33-4090-41a4-fe62-9b9b83bc3500/public', xHandle: 'keyfloapp', showFrontTags: true, bg: 'from-indigo-500 to-purple-600', network: 'Visa', category: 'onchain', archetype: 'wallet', custody: 'Non-Custodial', chain: 'Multi-chain', regions: ['global'], cashback: 'TBD', cashbackToken: 'TBD', fxFee: 'TBD', annualFee: 'TBD', features: ['Crypto spending', 'Self-custody', 'Mobile app', 'Virtual cards'], perks: ['New entrant', 'Wallet-first', 'Coming 2026'], website: 'https://keyflo.app', comingSoon: true, waitlistUrl: 'https://keyflo.app', platforms: 'both' },
   { id: 210, name: 'Stealf', logo: 'https://logo.clearbit.com/stealf.xyz', xHandle: 'stealf_finance', showFrontTags: true, bg: 'from-emerald-600 to-teal-800', network: 'Visa', category: 'onchain', archetype: 'stablecoin', custody: 'Non-Custodial', chain: 'Solana', regions: ['europe', 'global'], cashback: 'TBD', cashbackToken: 'TBD', fxFee: 'TBD', annualFee: 'TBD', features: ['Privacy wallet', 'USDC spending', 'SEPA transfers', 'Arcium encryption'], perks: ['Two-wallet system', 'Self-custody + compliance', 'Solana-powered'], website: 'https://stealf.xyz', comingSoon: true, waitlistUrl: 'https://stealf.xyz', platforms: 'both' },
   { id: 211, name: 'Jupiter Card', logo: 'https://spendbase.cards/logos/jupiter.png', xHandle: 'jup_mobile', showFrontTags: true, bg: 'from-green-400 to-emerald-600', network: 'Credit Card Network', category: 'cryptoNative', archetype: 'exchange', custody: 'Custodial', chain: 'Solana', regions: ['global'], cashback: 'TBD', cashbackToken: 'TBD', fxFee: '1.8%', annualFee: '$0', features: ['Credit card program', 'USDC deposits 1:1', 'Jupiter ID verification', 'Apple Pay & Google Pay'], perks: ['Credit card rails', 'Physical card May 2026', 'Jupiter ecosystem', 'Instant card freeze'], website: 'https://jup.ag/mobile', comingSoon: true, waitlistUrl: 'https://jup.ag/mobile', platforms: 'both' },
+  { id: 212, name: 'Volet', logo: 'https://logo.clearbit.com/volet.com', xHandle: 'VoletCom', showFrontTags: true, bg: 'from-blue-500 to-indigo-600', network: 'Visa / Mastercard', category: 'cryptoNative', archetype: 'wallet', custody: 'Custodial', chain: 'Multi-chain', regions: ['global', 'europe'], cashback: '0%', cashbackToken: 'N/A', fxFee: 'Low', annualFee: 'Low/Free', features: ['Plastic & virtual cards', 'Free P2P transfers', 'Crypto swap', 'Multi-currency wallets'], perks: ['Since 2014', '7M+ users', '150+ countries', '24/7 support'], website: 'https://volet.com/cards', platforms: 'both' },
 ];
 
 const regionLabels = { global: 'Global', americas: 'Americas', europe: 'Europe', apac: 'Asia-Pacific', latam: 'Latin America', india: 'India', argentina: 'Argentina' };
@@ -4319,6 +4320,25 @@ Best for Solana ecosystem users who want reliable real-world spending backed by 
       { q: "Is the Jupiter Card a credit card?", a: "It uses a credit card program for infrastructure and merchant acceptance, but you fund it with USDC deposits. It's not a traditional revolving credit line." },
       { q: "When will the physical Jupiter Card be available?", a: "Jupiter plans to launch a physical card in May 2026. At launch, the card is digital-only with Apple Pay and Google Pay support." },
       { q: "Is my Jupiter wallet connected to the card?", a: "No. Jupiter ID is separate from your Jupiter Mobile wallet. The card does not have access to your wallet funds — it only uses your identity verification and card balance." }
+    ]
+  },
+  'Volet': {
+    seoTitle: "Volet Card Review 2026: Crypto E-Wallet & Spending Card | Spendbase",
+    metaDescription: "Volet offers plastic & virtual cards for crypto spending. Since 2014, 7M+ users, 150+ countries. Free P2P transfers, multi-currency wallets →",
+    overview: `Volet is a payment platform operating since 2014 that combines e-wallets, crypto, and spending cards in a single account. With over 7 million users across 150+ countries, it's one of the more established players in the crypto card space.
+
+The platform offers both plastic and virtual Visa/Mastercard cards that let you spend your Volet balance at millions of merchants worldwide, including ATM withdrawals. You can hold multiple currencies, swap crypto, and send free instant P2P transfers between Volet wallets.
+
+Volet positions itself as a payment hub — hundreds of websites support Volet wallets for deposits and withdrawals, making it popular with affiliate marketers, freelancers, and crypto traders who need to move money between platforms. The cards are prepaid and loaded from your Volet balance.
+
+Security is solid with multi-tier account protection and 24/7 live support. It's custodial by design — Volet holds your funds. Best for users who want a reliable, established platform for crypto-to-fiat spending rather than cutting-edge DeFi features.`,
+    pros: ["Established since 2014", "7M+ users globally", "150+ country support", "Plastic & virtual cards", "Free P2P transfers", "24/7 live support"],
+    cons: ["Custodial", "No cashback program", "Prepaid model", "Less crypto-native", "No self-custody option"],
+    faq: [
+      { q: "How long has Volet been around?", a: "Volet has been operating since 2014, making it one of the longest-running platforms offering crypto-friendly cards and e-wallets." },
+      { q: "What cards does Volet offer?", a: "Volet offers both plastic and virtual Visa and Mastercard cards, depending on your region. Cards are instantly loaded from your Volet account balance." },
+      { q: "Is Volet available worldwide?", a: "Volet supports 150+ countries, though card availability and type may vary by region. Check their website for specific regional offerings." },
+      { q: "Does Volet charge fees?", a: "Volet offers free P2P transfers between wallets. Card fees are low or free depending on the card type and region. Check their fee schedule for specifics." }
     ]
   }
 };
