--- a/index.html
+++ b/index.html
@@ -3204,6 +3204,24 @@ function CardDetailPage({ card, darkMode, ratings, userRatedCards, onRate, onBac
           </div>
         )}
 
+        {/* Community CTA — visible on all tabs */}
+        <div className={`mt-6 p-5 rounded-xl flex flex-col sm:flex-row items-center justify-between gap-4 ${darkMode ? 'bg-gray-900 border border-gray-800' : 'bg-white border border-gray-200'}`}>
+          <div>
+            <h3 className={`text-sm font-bold ${darkMode ? 'text-white' : 'text-gray-900'}`}>Join the Spendbase community</h3>
+            <p className={`text-xs ${darkMode ? 'text-gray-400' : 'text-gray-500'}`}>Get card updates, reviews, and exclusive insights</p>
+          </div>
+          <div className="flex gap-3">
+            <a href="https://x.com/spendbasecards" target="_blank" rel="noopener noreferrer" className={`flex items-center gap-1.5 px-3 py-1.5 rounded-lg text-xs font-medium transition ${darkMode ? 'bg-gray-800 hover:bg-gray-700 text-white' : 'bg-gray-100 hover:bg-gray-200 text-gray-900'}`}>
+              <svg className="w-3.5 h-3.5" viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+              Follow on X
+            </a>
+            <a href="https://t.me/spendbasecards" target="_blank" rel="noopener noreferrer" className={`flex items-center gap-1.5 px-3 py-1.5 rounded-lg text-xs font-medium transition ${darkMode ? 'bg-gray-800 hover:bg-gray-700 text-white' : 'bg-gray-100 hover:bg-gray-200 text-gray-900'}`}>
+              <svg className="w-3.5 h-3.5" viewBox="0 0 24 24" fill="currentColor"><path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 12 0a12 12 0 0 0-.056 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 0 1 .171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.48.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z"/></svg>
+              Join Telegram
+            </a>
+          </div>
+        </div>
+
         {activeTab === 'reviews' && (
           <div className="space-y-6">
             {/* Trustpilot Reviews */}
@@ -5084,37 +5102,51 @@ function Spendbase() {
 
       <footer className={`border-t py-8 ${darkMode ? 'border-gray-800' : 'border-gray-200'}`}>
         <div className="max-w-6xl mx-auto px-4">
-          <div className="flex flex-col md:flex-row items-center justify-between gap-4">
-            <div className={`text-sm ${darkMode ? 'text-gray-500' : 'text-gray-500'}`}>
-              © 2026 Spendbase
+          <div className="flex flex-col gap-6">
+            {/* Social CTA */}
+            <div className="flex flex-col sm:flex-row items-center justify-center gap-4">
+              <a href="https://x.com/spendbasecards" target="_blank" rel="noopener noreferrer" className={`flex items-center gap-2 px-4 py-2 rounded-lg text-sm font-medium transition ${darkMode ? 'bg-gray-800 hover:bg-gray-700 text-white' : 'bg-gray-100 hover:bg-gray-200 text-gray-900'}`}>
+                <svg className="w-4 h-4" viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+                Follow us on X
+              </a>
+              <a href="https://t.me/spendbasecards" target="_blank" rel="noopener noreferrer" className={`flex items-center gap-2 px-4 py-2 rounded-lg text-sm font-medium transition ${darkMode ? 'bg-gray-800 hover:bg-gray-700 text-white' : 'bg-gray-100 hover:bg-gray-200 text-gray-900'}`}>
+                <svg className="w-4 h-4" viewBox="0 0 24 24" fill="currentColor"><path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 12 0a12 12 0 0 0-.056 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 0 1 .171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.48.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z"/></svg>
+                Join our Telegram
+              </a>
             </div>
-            <div className="flex items-center gap-6">
-              <button
-                onClick={() => setShowAdvertise(true)}
-                className={`text-sm hover:underline transition ${darkMode ? 'text-lime-400 hover:text-lime-300' : 'text-lime-600 hover:text-lime-700'}`}
-              >
-                Advertise Your Card
-              </button>
-              <button
-                onClick={() => setShowListCard(true)}
-                className={`text-sm hover:underline transition ${darkMode ? 'text-cyan-400 hover:text-cyan-300' : 'text-cyan-600 hover:text-cyan-700'}`}
-              >
-                List Your Card
-              </button>
-              <a
-                href="#privacy"
-                onClick={(e) => { e.preventDefault(); setActiveView('privacy'); }}
-                className={`text-sm hover:underline transition ${darkMode ? 'text-gray-400 hover:text-white' : 'text-gray-500 hover:text-gray-900'}`}
-              >
-                Privacy Policy
-              </a>
-              <a
-                href="#terms"
-                onClick={(e) => { e.preventDefault(); setActiveView('terms'); }}
-                className={`text-sm hover:underline transition ${darkMode ? 'text-gray-400 hover:text-white' : 'text-gray-500 hover:text-gray-900'}`}
-              >
-                Terms of Service
-              </a>
+            {/* Footer links */}
+            <div className="flex flex-col md:flex-row items-center justify-between gap-4">
+              <div className={`text-sm ${darkMode ? 'text-gray-500' : 'text-gray-500'}`}>
+                © 2026 Spendbase
+              </div>
+              <div className="flex items-center gap-6">
+                <button
+                  onClick={() => setShowAdvertise(true)}
+                  className={`text-sm hover:underline transition ${darkMode ? 'text-lime-400 hover:text-lime-300' : 'text-lime-600 hover:text-lime-700'}`}
+                >
+                  Advertise Your Card
+                </button>
+                <button
+                  onClick={() => setShowListCard(true)}
+                  className={`text-sm hover:underline transition ${darkMode ? 'text-cyan-400 hover:text-cyan-300' : 'text-cyan-600 hover:text-cyan-700'}`}
+                >
+                  List Your Card
+                </button>
+                <a
+                  href="#privacy"
+                  onClick={(e) => { e.preventDefault(); setActiveView('privacy'); }}
+                  className={`text-sm hover:underline transition ${darkMode ? 'text-gray-400 hover:text-white' : 'text-gray-500 hover:text-gray-900'}`}
+                >
+                  Privacy Policy
+                </a>
+                <a
+                  href="#terms"
+                  onClick={(e) => { e.preventDefault(); setActiveView('terms'); }}
+                  className={`text-sm hover:underline transition ${darkMode ? 'text-gray-400 hover:text-white' : 'text-gray-500 hover:text-gray-900'}`}
+                >
+                  Terms of Service
+                </a>
+              </div>
             </div>
           </div>
         </div>
