--- a/index.html
+++ b/index.html
@@ -1670,14 +1670,28 @@ function CardsView({ darkMode, searchTerm, ratings, onRate, userRatedCards, comp
     <div className="max-w-6xl mx-auto px-4 sm:p-6">
       {/* SEO-optimized hero section */}
       <header className="mb-6 sm:mb-8">
-        <h1 className={`text-2xl sm:text-4xl font-bold mb-2 sm:mb-3 ${darkMode ? 'text-white' : 'text-gray-900'}`}>Best Crypto Cards 2026</h1>
-        <p className={`text-sm sm:text-lg mb-3 sm:mb-4 ${darkMode ? 'text-gray-300' : 'text-gray-700'}`}>
-          Compare {allCards.length}+ crypto debit cards, USDC cards, and Bitcoin cards.
-        </p>
-        <div className={`text-xs sm:text-sm ${darkMode ? 'text-gray-400' : 'text-gray-600'} hidden sm:block`}>
-          <span className="inline-flex items-center gap-2 mr-4">✓ Self-custody & non-custodial cards</span>
-          <span className="inline-flex items-center gap-2 mr-4">✓ Up to 15% crypto cashback</span>
-          <span className="inline-flex items-center gap-2">✓ Stablecoin spending (USDC, USDT)</span>
+        <div className="flex items-start justify-between gap-4">
+          <div>
+            <h1 className={`text-2xl sm:text-4xl font-bold mb-2 sm:mb-3 ${darkMode ? 'text-white' : 'text-gray-900'}`}>Best Crypto Cards 2026</h1>
+            <p className={`text-sm sm:text-lg mb-3 sm:mb-4 ${darkMode ? 'text-gray-300' : 'text-gray-700'}`}>
+              Compare {allCards.length}+ crypto debit cards, USDC cards, and Bitcoin cards.
+            </p>
+            <div className={`text-xs sm:text-sm ${darkMode ? 'text-gray-400' : 'text-gray-600'} hidden sm:block`}>
+              <span className="inline-flex items-center gap-2 mr-4">✓ Self-custody & non-custodial cards</span>
+              <span className="inline-flex items-center gap-2 mr-4">✓ Up to 15% crypto cashback</span>
+              <span className="inline-flex items-center gap-2">✓ Stablecoin spending (USDC, USDT)</span>
+            </div>
+          </div>
+          <div className="flex gap-2 flex-shrink-0">
+            <a href="https://x.com/spendbasecards" target="_blank" rel="noopener noreferrer" className={`flex items-center gap-1.5 px-3 py-2 rounded-lg text-xs font-medium transition ${darkMode ? 'bg-gray-800 hover:bg-gray-700 text-white' : 'bg-gray-100 hover:bg-gray-200 text-gray-900'}`}>
+              <svg className="w-4 h-4" viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+              <span className="hidden sm:inline">Follow</span>
+            </a>
+            <a href="https://t.me/spendbasecards" target="_blank" rel="noopener noreferrer" className={`flex items-center gap-1.5 px-3 py-2 rounded-lg text-xs font-medium transition ${darkMode ? 'bg-gray-800 hover:bg-gray-700 text-white' : 'bg-gray-100 hover:bg-gray-200 text-gray-900'}`}>
+              <svg className="w-4 h-4" viewBox="0 0 24 24" fill="currentColor"><path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 12 0a12 12 0 0 0-.056 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 0 1 .171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.48.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z"/></svg>
+              <span className="hidden sm:inline">Join</span>
+            </a>
+          </div>
         </div>
       </header>
 
