--- a/index.html
+++ b/index.html
@@ -1457,16 +1457,21 @@ function Header({ activeView, setActiveView, onSubscribe, darkMode, setDarkMode,
       <div className="max-w-6xl mx-auto px-4 py-3">
         <div className="flex items-center justify-between gap-4">
           {/* Logo - navigates to home */}
-          <button onClick={goHome} className="flex-shrink-0">
-            <img
-              src={darkMode
-                ? "https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/135aa8ee-6c5c-4779-7f78-cfbffb724600/public"
-                : "https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/bf8b9a1c-ce8b-49da-48d1-027b873f3300/public"
-              }
-              alt="Spendbase"
-              className={darkMode ? "h-10 md:h-14" : "h-16 md:h-24"}
-              style={{ objectFit: 'contain' }}
-            />
+          <button onClick={goHome} className="flex-shrink-0 flex items-center gap-2">
+            <svg viewBox="0 0 36 36" className="h-8 md:h-9 w-8 md:w-9">
+              <defs>
+                <linearGradient id="headerLogoGrad" x1="0%" y1="0%" x2="100%" y2="100%">
+                  <stop offset="0%" stopColor="#0F766E"/>
+                  <stop offset="100%" stopColor="#14B8A6"/>
+                </linearGradient>
+              </defs>
+              <rect width="36" height="36" rx="8" fill="url(#headerLogoGrad)"/>
+              <text x="18" y="25" textAnchor="middle" fill="white" fontSize="22" fontWeight="800" fontFamily="-apple-system,BlinkMacSystemFont,'SF Pro Display',sans-serif">S</text>
+            </svg>
+            <div className="flex items-baseline">
+              <span className={`text-lg md:text-xl font-bold tracking-tight ${darkMode ? 'text-white' : 'text-gray-900'}`}>Spendbase</span>
+              <span className="text-lg md:text-xl font-bold tracking-tight text-teal-500">.cards</span>
+            </div>
           </button>
 
           {/* Search Bar - visible only on cards view, hidden on mobile */}
